fixed passive income animation spacing

--- a/app/scss/sections/_home.scss
+++ b/app/scss/sections/_home.scss
@@ -493,7 +493,7 @@
     font-size: 3rem;
     font-weight: 900;
     line-height: 1;
-    margin-top: 17px;
+    margin-top: 18.3px;
     letter-spacing: -1.5px;
 
     @include breakpoint(lg-tablet) {
